--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site api</title>
     <link rel="stylesheet" href="((url_for('static', filename='css/style.css')))">
     <script src="https://unpkg.com/vue"></script>
