--- a/app/templates/map-api.html
+++ b/app/templates/map-api.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My site api</title>
+    <title>Map-API</title>
     <link rel="stylesheet" href="((url_for('static', filename='css/style.css')))">
     <script src="https://unpkg.com/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.4"></script>
@@ -19,7 +19,6 @@
                 <p>{{ link.rule }}</p>
             </div>
         </div>
-        <hr style="margin-top: 1%">
     </div>
     <script src="(( url_for('static', filename='js/home.vue.js') ))"></script>
 </body>
